<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.CreateStoryFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:padding="15dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/image_preview"
                android:layout_width="match_parent"
                android:src="@drawable/baseline_broken_image_24"
                android:layout_height="400dp"
                android:padding="10dp"
                android:contentDescription="@string/foto_story_user" />

            <Button
                android:id="@+id/gallery_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/image_preview"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:text="@string/gallery" />

            <EditText
                android:textSize="16dp"
                android:labelFor="@id/ed_add_description"
                android:padding="10dp"
                android:layout_below="@id/gallery_button"
                android:id="@+id/ed_add_description"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:text="@string/desc"
                android:inputType="text"
                android:gravity="top"
                android:importantForAutofill="no" />

            <Button
                android:layout_centerHorizontal="true"
                android:layout_below="@id/ed_add_description"
                android:id="@+id/button_add"
                android:text="@string/add_story"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>

    <ProgressBar
        android:id="@+id/loading_bar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>